# progate-hack

./: README.md  amplify.yml  compose.yml
.github/workflows/: backend.yml
backend/: Cargo.toml  Dockerfile  diesel.toml
backend/migrations/2024-08-29-203703_create_tags/: up.sql
backend/migrations/2024-08-29-204844_create_times/: down.sql  up.sql
backend/migrations/2024-08-31-025101_create_rooms/: up.sql
backend/migrations/2024-08-31-035119_create_voices/: down.sql  up.sql
backend/migrations/2024-09-01-034507_create_user_voices/: down.sql  up.sql
backend/src/: database.rs  main.rs  schema.rs  utils.rs
backend/src/api/: mod.rs  roomapi.rs  tagapi.rs  timeapi.rs  uservoiceapi.rs  voiceapi.rs
backend/src/models/: mod.rs  roommodel.rs  tagmodel.rs  timemodel.rs  uservoicemodel.rs  voicemodel.rs
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/login/: FormButton.tsx  page.tsx
frontend/app/profile/: page.tsx
frontend/app/test/: page.tsx
frontend/components/Header/: Header.tsx
frontend/components/ui/: chart.tsx  drawer.tsx
frontend/features/auth/: AuthView.tsx
frontend/features/clock/: Clock.tsx
frontend/features/meeting/: Meeting.tsx
frontend/features/mindmap/: MindMap.tsx
frontend/features/reading/: Reading.tsx
frontend/features/sandtime/: SandTime.tsx
frontend/features/timer/: Timer.tsx
frontend/features/todo/: Todo.tsx
frontend/hooks/: useBgColor.ts
frontend/lib/next-auth/: option.ts  (+1 more)
frontend/prisma/: schema.prisma
voicevox/: Dockerfile
(+13 files in other folders)
