[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web="4"
diesel = { version = "2.1.0", features = ["postgres", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
serde_json = "1.0"
actix-cors = "0.6.4"
reqwest = { version = "0.12", features = ["json"] }